I don't remember what's changed

--- a/AI_reference.tex
+++ b/AI_reference.tex
@@ -5,6 +5,7 @@
 \usepackage{booktabs}
 \usepackage{tabulary}
 \usepackage[multidot]{grffile}
+\usepackage{wrapfig}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{forest}
@@ -57,6 +58,9 @@
 
 \begin{document}
 \maketitle
+
+\setlength{\abovedisplayskip}{3pt}
+\setlength{\belowdisplayskip}{3pt}
 
 \input{Chapter_1.tex}
 \input{Chapter_2.tex}
