--- a/Chapter_1.tex
+++ b/Chapter_1.tex
@@ -68,6 +68,14 @@
 你是如何理解人工智能的研究目标的？
 \end{question}
 \begin{solution}
+人工智能的一般研究目标为：
+	\begin{enumerate}
+		\item 更好地理解人工智能 \par
+		通过编写程序来模仿和检验有关人类智能的理论。
+		\item 创造有用的灵巧程序 \par 
+		该程序能够执行一般需要人类专家才能实现的任务。
+	\end{enumerate} \par 
+	一般地，人工智能的研究目标又分为近期研究目标和远期研究目标两种。近期研究目标时间早智能计算机以代替人类的某些智力活动；远期目标是用自动机模仿人类的思维活动和智力功能。
 \end{solution}
 
 \begin{question}
