--- a/Chapter_3.tex
+++ b/Chapter_3.tex
@@ -29,6 +29,7 @@
 试举例比较各种搜索方法的效率。
 \end{question}	
 \begin{solution}
+几种搜索算法的效率：
 	\begin{description}
 		\item[宽度优先搜索] 只要问题有解，用宽度优先搜索总可以得到解，而且得到的是路径最短的解。宽度优先搜索盲目性较大，当目标节点距初始节点较远时将会产生许多无用节点，搜索效率低。
 		\item[深度优先搜索] 搜索一旦进入某个分支，就将沿着该分支一直向下搜索。如果目标节点恰好在此分支上，则可较快地得到解。但是，如果目标节点不在此分支上，而该分支又是一个无穷分支，则就不可能得到解。所以深度优先搜索是不完备的，即使问题有解，它也不一定能求得解。所求得的解答路径不一定是最短路径。
