Ch5 is almost finished

--- a/Chapter_3.tex
+++ b/Chapter_3.tex
@@ -178,6 +178,25 @@
 试比较宽度优先搜索、有界深度优先搜索及有序搜索的搜索效率，并以实例数据加以说明。
 \end{question}
 \begin{solution}
+以八数码难题为例，下面比较宽度优先搜索、有界深度优先搜索及有序搜索的搜索效率。\par
+	\begin{table}[htbp]
+	\centering
+	\begin{tabular}{p{80pt}p{40pt}p{40pt}p{110pt}}
+		\toprule
+		搜索方法 & CLOSE表长度 & OPEN表长度 & 搜索效率 \\
+		\midrule
+		宽度优先搜索 & 27 & 11 &
+		优点：只要问题有解，总可以得到解，而且得到的是路径最短的解。缺点：盲目性较大，当目标节点距初始节点较远时将会产生许多无用节点，搜索效率低。 \\
+		\midrule
+		有界深度优先搜索 & 16 & 13 &
+		如果问题有解，且其路径长度$\leq d_m$，则上述搜索过程一定能求得解。但是，若解的路径长度$>d_m$，则上述搜索过程就得不到解。这说明在有界深度优先搜索中，深度界限的选择是很重要的。要恰当地给出dm的值是比较困难的。即使能求出解，它也不一定是最优解。搜索效率低。 \\
+		\midrule
+		有序搜索 & 5 & 7 &
+		宽度优先搜索、深度优先搜索、等代价搜索均是有序搜索技术的特例。正确选择估价函数对搜索结果具有决定性的作用。搜索效率高。\\
+		\bottomrule
+	\end{tabular}
+	\caption{搜索效率比较}\label{tab:comparison-of-searching}
+	\end{table} 
 \end{solution}
 
 \begin{question}
