--- a/Chapter_3.tex
+++ b/Chapter_3.tex
@@ -164,14 +164,20 @@
 \begin{solution}
 定义操作符集：$F=\{f1,f2,f3,f4\}$，其中：$f1$表示空格右移；$f2$表示空格上移；$f3$表示空格左移；$f4$表示空格下移。\par
 搜索时，节点的扩展顺序规定为按右、左、上、下方向移动空格。并设置深度界限为$8$。\par
-由上述有界深度优先搜索树中可见，当$d=8$时，八数码难题的一个解为：
-\[f4, f4, f3, f2, f2, f3, f4, f3\]
+	\begin{figure}[H]
+		\centering
+		\input{figures/8-digits-search-dfs.tex}
+		\caption{八数码难题} \label{Fig:8-digits-search-dfs}
+	\end{figure}
+由图\ref{Fig:8-digits-search-dfs}有界深度优先搜索树中可见，当$d=8$时，八数码难题的一个解为：
+\[f4, f4, f3, f2, f2, f3, f4, f3 \, .\]
 \end{solution}
 
 \begin{question}
 应用最新的方法表达传教士和野人问题，编写一个计算机程序，以求得安全渡过全部$6$个人的解答。（提示：在应用状态空间表示和搜索方法时，可用$(N_m,N_c)$来表示状态描述，其中$N_m$和$N_c$分别为传教士和野人的人数。初始状态为$(3,3)$，而可能的中间状态为$(0,1)$,$(0,2)$,$(0,3)$,$(1,1)$,$(2,1)$,$(2,2)$,$(3,0)$,$(3,1)$和$(3,2)$等。
 \end{question}
 \begin{solution}
+略。
 \end{solution}
 
 \begin{question}
@@ -181,18 +187,18 @@
 以八数码难题为例，下面比较宽度优先搜索、有界深度优先搜索及有序搜索的搜索效率。\par
 	\begin{table}[htbp]
 	\centering
-	\begin{tabular}{p{80pt}p{40pt}p{40pt}p{110pt}}
+	\begin{tabular}{p{50pt}p{40pt}p{40pt}p{140pt}}
 		\toprule
 		搜索方法 & CLOSE表长度 & OPEN表长度 & 搜索效率 \\
 		\midrule
 		宽度优先搜索 & 27 & 11 &
-		优点：只要问题有解，总可以得到解，而且得到的是路径最短的解。缺点：盲目性较大，当目标节点距初始节点较远时将会产生许多无用节点，搜索效率低。 \\
+		优点：只要问题有解，总可以得到解，而且得到的是路径最短的解。\newline 缺点：盲目性较大，当目标节点距初始节点较远时将会产生许多无用节点，搜索效率低。 \\
 		\midrule
 		有界深度优先搜索 & 16 & 13 &
-		如果问题有解，且其路径长度$\leq d_m$，则上述搜索过程一定能求得解。但是，若解的路径长度$>d_m$，则上述搜索过程就得不到解。这说明在有界深度优先搜索中，深度界限的选择是很重要的。要恰当地给出dm的值是比较困难的。即使能求出解，它也不一定是最优解。搜索效率低。 \\
+		如果问题有解，且其路径长度$\leq d_m$，则上述搜索过程一定能求得解。但是，若解的路径长度$>d_m$，则上述搜索过程就得不到解。这说明在有界深度优先搜索中，深度界限的选择是很重要的。要恰当地给出$d_m$的值是比较困难的。即使能求出解，它也不一定是最优解。\newline 搜索效率低。 \\
 		\midrule
 		有序搜索 & 5 & 7 &
-		宽度优先搜索、深度优先搜索、等代价搜索均是有序搜索技术的特例。正确选择估价函数对搜索结果具有决定性的作用。搜索效率高。\\
+		宽度优先搜索、深度优先搜索、等代价搜索均是有序搜索技术的特例。正确选择估价函数对搜索结果具有决定性的作用。\newline 搜索效率高。\\
 		\bottomrule
 	\end{tabular}
 	\caption{搜索效率比较}\label{tab:comparison-of-searching}
@@ -314,9 +320,9 @@
 \begin{solution}
 产生式规则如下：
 	\begin{enumerate}
-		\item IF 两个三角形全等 THEN 各对应角相等 
-		\item IF 两个三角形全等 THEN 各对应边相等 
-		\item IF 两个三角形各对应边相等 THEN 两三角形全等 
-		\item IF 它是等腰三角形 THEN 它的两底角相等
+		\item IF 两个三角形全等 THEN 各对应角相等；
+		\item IF 两个三角形全等 THEN 各对应边相等；
+		\item IF 两个三角形各对应边相等 THEN 两三角形全等；
+		\item IF 它是等腰三角形 THEN 它的两底角相等。
 	\end{enumerate}
 \end{solution}
