--- a/Chapter_7.tex
+++ b/Chapter_7.tex
@@ -11,7 +11,7 @@
 试述机器学习系统的基本结构，并说明各部分的作用。
 \end{question}
 \begin{solution}
-机器学习系统基本结构如图××。环境向系统的学习部分提供某些信息，学习部分利用这些信息修改知识库，以增进系统执行部分完成任务的效能，执行部分根据知识库完成任务，同时把获得的信息反馈给学习部分。 影响学习系统设计的最重要的因素是环境向系统提供的信息。更具体地说是信息的质量。 
+机器学习系统基本结构如图××。环境向系统的学习部分提供某些信息，学习部分利用这些信息修改知识库，以增进系统执行部分完成任务的效能，执行部分根据知识库完成任务，同时把获得的信息反馈给学习部分。影响学习系统设计的最重要的因素是环境向系统提供的信息。更具体地说是信息的质量。 
 \end{solution}
 
 \begin{question}
@@ -68,12 +68,14 @@
 用C语言编写一套计算机程序，用于执行BP学习算法。
 \end{question}
 \begin{solution}
+略。
 \end{solution}
 
 \begin{question}
 试应用神经网络模型优化求解销售员旅行问题。
 \end{question}
 \begin{solution}
+略。
 \end{solution}
 
 \begin{question}
@@ -85,6 +87,10 @@
 试说明网络性能是否会变化。
 \end{question}
 \begin{solution}
+\begin{enumerate}
+	\item 不会。
+	\item 会。
+\end{enumerate}
 \end{solution}
 
 \begin{question}
@@ -98,7 +104,7 @@
 什么是知识发现？知识发现与数据挖掘有何关系？ 
 \end{question}
 \begin{solution}
-根据费亚德的定义，数据库中的知识发现是从大量数据中辨识出有效的、新颖的、潜在有用的、并可被理解的模式的高级处理过程。 \par
+根据费亚德的定义，数据库中的知识发现是从大量数据中辨识出有效的、新颖的、潜在有用的、并可被理解的模式的高级处理过程。\par
 数据挖掘是知识发现中的一个步骤，它主要是利用某些特定的知识发现算法，在一定的运算效率内，从数据中发现出有关的知识。
 \end{solution}
 
@@ -164,10 +170,12 @@
 增强学习有何特点？学习自动机的学习模式为何？
 \end{question}
 \begin{solution}
+略。
 \end{solution}
 
 \begin{question}
 什么是$Q^-$学习？它有何优缺点？
 \end{question}
 \begin{solution}
+略。
 \end{solution}
